Test: 테스트 경고문구 없애는 코드 추가